前回再生位置記録を追加
